<resources>
    <string name="app_name">Grywalizacja dla Dzieci</string>
    <string name="tab_text_1"> Zadania codzienne </string>
    <string name="tab_text_2"> Zadania do wykonania </string>
    <string name="tab_text_3"> Nagrody </string>
    <string name="tab_text_4"> Wykonane zadania</string>
    <string name="add_things">Add things</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Home">Strona główna</string>
    <string name="Logout">Wyloguj się</string>
    <string name="Profile">Profil</string>
    <string name="zero">0</string>
    <string name="refresh_views">Refresh Views</string>
    <string name="title_activity_edit_task">editTaskActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="zaloguj_si_na_swoje_konto">Zaloguj się na swoje konto</string>
    <string name="nazwa_u_ytkownika">Nazwa użytkownika</string>
    <string name="has_o">Hasło</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="nie_posiadasz_konta">Nie posiadasz konta?</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="adres_e_mail">Adres e-mail</string>
    <string name="rejestracja_konta_rodzica">Rejestracja konta rodzica</string>
    <string name="passwordsIncorrect">Hasła nie są identyczne</string>
    <string name="title_activity_settings">settingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ustawienia_konta">Ustawienia konta</string>
    <string name="login">login</string>
    <string name="aktualne_has_o">Aktualne hasło</string>
    <string name="powt_rz_nowe_has_o">powtórz nowe hasło</string>
    <string name="nowe_has_o">nowe hasło</string>
    <string name="title_activity_settings2">Settings2Activity</string>
</resources>